# contraflow

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  copy.bat  copy.sh  run_tests.sh
gtest/: .test_contraflow.cpp.swp  allTests.cpp  test_contraflow.cpp
src/: CMakeLists.txt  casing.h  configuration.cpp  configuration.h  construct.cpp  construct.h  contraflow.cpp  contraflow.h  fluid.h  greeks.h  input.h  interface.h  main.cpp  makefile  piping.cpp  piping.h  segment.cpp  segment.h  utilities.h
src/matrix_stru3/: stru3_gauss.cpp  stru3_matrix.h  stru3_sliceIter.h
test/: main.cpp  run  run.sh
